--- a/adguardhome/Makefile
+++ b/adguardhome/Makefile
@@ -72,7 +72,7 @@ endef
 
 define Package/$(PKG_NAME)/install
 	$(INSTALL_DIR) $(1)/usr/bin
-	$(INSTALL_BIN) $(BUILD_DIR)/AdGuardHome/AdGuardHome $(1)/usr/bin/AdGuardHome
+	$(INSTALL_BIN) $(BUILD_DIR)/AdGuardHome/AdGuardHome $(1)/usr/bin/AdGuardHome/
 endef
 
 $(eval $(call BuildPackage,$(PKG_NAME)))
