--- a/luci-app-netspeedtest/luci-app-netspeedtest/Makefile
+++ b/luci-app-netspeedtest/luci-app-netspeedtest/Makefile
@@ -19,25 +19,15 @@ define Package/$(PKG_NAME)
 	CATEGORY:=LuCI
 	SUBMENU:=3. Applications
 	TITLE:=LuCI Support for netspeedtest
-  DEPENDS:=+python3 +iperf3
-  DESCRIPTION:=LuCI support Network speed test intranet and Extranet
-  PKGARCH:=all
-endef
-
-define Package/$(PKG_NAME)/description
-	Luci Support for netspeedtest.
-endef
-
-define Build/Prepare
-	$(foreach po,$(wildcard ${CURDIR}/po/zh-cn/*.po), \
-	po2lmo $(po) $(PKG_BUILD_DIR)/$(patsubst %.po,%.lmo,$(notdir $(po)));)
+	PKGARCH:=all
+	DEPENDS:=+python3 +iperf3
 endef
 
 define Build/Compile
 endef
 
 define Package/$(PKG_NAME)/conffiles
-/etc/config/netspeedtest
+	/etc/config/netspeedtest
 endef
 
 define Package/$(PKG_NAME)/install
@@ -46,10 +36,7 @@ define Package/$(PKG_NAME)/install
 	$(INSTALL_DIR) $(1)/
 	cp -pR ./root/* $(1)/
 	$(INSTALL_DIR) $(1)/usr/lib/lua/luci/i18n
-	$(INSTALL_DATA) $(PKG_BUILD_DIR)/netspeedtest.lmo $(1)/usr/lib/lua/luci/i18n/
+	po2lmo ./po/zh-cn/netspeedtest.po $(1)/usr/lib/lua/luci/i18n/netspeedtest.zh-cn.lmo
 endef
 
-include $(TOPDIR)/feeds/luci/luci.mk
-
-# call BuildPackage - OpenWrt buildroot signature
-
+$(eval $(call BuildPackage,$(PKG_NAME)))
