--- a/smartdns/conf/custom.conf
+++ b/smartdns/conf/custom.conf
@@ -8,6 +8,6 @@ speed-check-mode tcp:443,tcp:80,ping
 bind: 6053 -group china
 bind: 7913 -group world
 
-# 去广告文件，删除最后一排#使用自带规则，也可自定义
+# 去广告文件，下载到指定目录，删除最后一排#启用规则
 # https://anti-ad.net/anti-ad-for-smartdns.conf
 # conf-file /etc/smartdns/anti-ad-smartdns.conf
