--- a/adguardhome/Makefile
+++ b/adguardhome/Makefile
@@ -1,7 +1,7 @@
 #
 # Copyright (C) 2015-2016 OpenWrt.org
 # This is free software, licensed under the GNU General Public License v2.
-# See /LICENSE.txt for more information.
+# See /LICENSE for more information.
 #
 
 include $(TOPDIR)/rules.mk
@@ -19,7 +19,7 @@ PKG_LICENSE:=GPL-3.0-only
 PKG_LICENSE_FILES:=LICENSE.txt
 PKG_MAINTAINER:=Dobroslaw Kijowski <dobo90@gmail.com>
 
-PKG_BUILD_DEPENDS:=golang/host node/host
+PKG_BUILD_DEPENDS:=golang/host node/host node-yarn/host packr/host
 PKG_BUILD_PARALLEL:=1
 PKG_USE_MIPS16:=0
 
