--- a/luci-app-ddnsto/Makefile
+++ b/luci-app-ddnsto/Makefile
@@ -6,7 +6,7 @@
 include $(TOPDIR)/rules.mk
 
 LUCI_TITLE:=LuCI support for ddnsto
-LUCI_DEPENDS:=+ddnsto
+LUCI_DEPENDS:=ddnsto
 LUCI_PKGARCH:=all
 PKG_VERSION:=1.0.0
 PKG_RELEASE:=1
