--- a/smartdns/conf/smartdns.conf
+++ b/smartdns/conf/smartdns.conf
@@ -22,7 +22,31 @@ config server
 	option enabled '1'
 	option type 'udp'
 	option name 'ali'
-	option ip '223.5.5.5'
+	option ip '223.6.6.6'
+	option server_group 'china'
+	option blacklist_ip '0'
+
+config server
+	option enabled '1'
+	option type 'udp'
+	option name '114'
+	option ip '114.114.115.115'
+	option server_group 'china'
+	option blacklist_ip '0'
+
+config server
+	option enabled '1'
+	option type 'udp'
+	option name 'baidu'
+	option ip '180.76.76.76'
+	option server_group 'china'
+	option blacklist_ip '0'
+
+config server
+	option enabled '1'
+	option type 'udp'
+	option name 'pod'
+	option ip '119.29.29.29'
 	option server_group 'china'
 	option blacklist_ip '0'
 
@@ -45,32 +69,8 @@ config server
 config server
 	option enabled '1'
 	option type 'udp'
-	option name '114'
-	option ip '114.114.115.115'
-	option server_group 'china'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option type 'udp'
-	option name 'one'
-	option ip '117.50.11.11'
-	option server_group 'china'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option type 'udp'
-	option name 'pod'
-	option ip '119.29.29.29'
-	option server_group 'china'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option type 'udp'
-	option name 'baidu'
-	option ip '180.76.76.76'
+	option name 'unipai'
+	option ip '123.125.81.6'
 	option server_group 'china'
 	option blacklist_ip '0'
 
