--- a/adguardhome/Makefile
+++ b/adguardhome/Makefile
@@ -6,14 +6,14 @@
 
 include $(TOPDIR)/rules.mk
 
-PKG_NAME:=AdGuardHome
-PKG_VERSION:=0.107.6
+PKG_NAME:=adguardhome
+PKG_VERSION:=0.107.29
 PKG_RELEASE:=1
 
 PKG_SOURCE_PROTO:=git
-PKG_SOURCE_VERSION:=368a98fb296da349ed7fb99b03c4ed6b7d0dda3a
+PKG_SOURCE_VERSION:=v$(PKG_VERSION)
 PKG_SOURCE_URL:=https://github.com/AdguardTeam/AdGuardHome
-PKG_MIRROR_HASH:=skip
+PKG_MIRROR_HASH:=591bd440a3a5be0280880f9398cd7d420ebbbacb176f9279f586d0e2a952ff0a
 
 PKG_LICENSE:=GPL-3.0-only
 PKG_LICENSE_FILES:=LICENSE.txt
