--- a/smartdns/conf/smartdns.conf
+++ b/smartdns/conf/smartdns.conf
@@ -1,36 +1,36 @@
 
 config smartdns
 	option server_name 'smartdns'
-	option port '6053'
+	option port '5055'
 	option seconddns_tcp_server '1'
 	option tcp_server '1'
 	option ipv6_server '1'
-	option cache_size '10000'
+	option cache_size '131072'
 	option rr_ttl_min '300'
 	option rr_ttl_max '3600'
-	option seconddns_port '7913'
+	option seconddns_port '6055'
 	option seconddns_server_group 'world'
 	option seconddns_no_speed_check '1'
 	option seconddns_no_dualstack_selection '1'
 	option seconddns_no_cache '1'
-	option redirect 'none'
-	list old_redirect 'none'
-	list old_port '6053'
-	list old_enabled '0'
+	option enabled '0'
+	option auto_set_dnsmasq '0'
+	option bind_device '1'
+	option dualstack_ip_selection '1'
+	option serve_expired '1'
+	option cache_persist '1'
+	option resolve_local_hostnames '1'
+	option force_https_soa '1'
+	option seconddns_enabled '1'
+	option old_port '5055'
+	option old_enabled '0'
+	option old_auto_set_dnsmasq '0'
 
 config server
 	option enabled '1'
 	option type 'udp'
 	option name 'ali'
 	option ip '223.6.6.6'
-	option server_group 'china'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option type 'udp'
-	option name '114'
-	option ip '114.114.115.115'
 	option server_group 'china'
 	option blacklist_ip '0'
 
@@ -44,11 +44,24 @@ config server
 
 config server
 	option enabled '1'
-	option type 'udp'
+	option type 'tcp'
 	option name 'pod'
 	option ip '119.29.29.29'
 	option server_group 'china'
-	option blacklist_ip '0'
+
+config server
+	option enabled '1'
+	option type 'tcp'
+	option name '114'
+	option ip '114.114.115.115'
+	option server_group 'china'
+
+config server
+	option enabled '1'
+	option name 'byte'
+	option ip '180.184.1.1'
+	option type 'udp'
+	option server_group 'china'
 
 config server
 	option enabled '1'
@@ -102,18 +115,15 @@ config server
 	option enabled '1'
 	option name 'cloudflare'
 	option ip '1.1.1.1'
-	option type 'tls'
+	option type 'tcp'
 	option server_group 'world'
-	option blacklist_ip '0'
 
 config server
 	option enabled '1'
 	option name 'google'
 	option ip '8.8.8.8'
-	option type 'tcp'
-	option no_check_certificate '0'
+	option type 'tls'
 	option server_group 'world'
-	option blacklist_ip '0'
 
 config server
 	option enabled '1'
@@ -126,6 +136,13 @@ config server
 
 config server
 	option enabled '1'
+	option name 'opendns'
+	option ip '208.67.222.222'
+	option type 'udp'
+	option server_group 'world'
+
+config server
+	option enabled '1'
 	option name 'google'
 	option ip 'https://dns.google/dns-query'
 	option type 'https'
@@ -134,17 +151,16 @@ config server
 
 config server
 	option enabled '1'
-	option name 'twnic'
-	option ip 'https://dns.twnic.tw/dns-query'
+	option name 'cloudflare'
+	option ip 'https://cloudflare-dns.com/dns-query'
 	option type 'https'
 	option server_group 'world'
-	option blacklist_ip '0'
 
 config server
 	option enabled '1'
-	option name 'open'
+	option name 'opendns'
 	option ip 'https://doh.opendns.com/dns-query'
 	option type 'https'
-	option no_check_certificate '0'
 	option server_group 'world'
-	option blacklist_ip '0'
+
+config domain-rule
